# ni-pdp-sp

./: link-graph-gen.md  report.md
report_src/: combined_speedup_recursion.csv  comparison_table.csv  mpi_1.csv  mpi_2.csv  mpi_3.csv  plot2.py  plot3.py  plot_cas_behu_impl_logscale.py  ref_seq.csv  tabulka_vysledku.csv
report_src/cichra_pdp/: report.md
report_src/cichra_pdp/logs/: mp_data.csv  mp_task.csv  seq.csv
report_src/cichra_pdp/scripts/: plot2.py  plot3.py  plot_cas_behu_impl_logscale.py  plot_rec.py
report_src/cichra_pdp/src/data/: Graph.cpp  Graph.h  MinCutSolver.h
report_src/cichra_pdp/src/mpi/: mpi_main_1.cpp  mpi_main_2.cpp
report_src/cichra_pdp/src/seq/: Graph.cpp  MinCutSolver.cpp  main.cpp
report_src/cichra_pdp/src/task/: Graph.h  MinCutSolver.cpp  MinCutSolver.h  main.cpp
stage-1/: CMakeLists.txt  Graph.cpp  Graph.h  MinCutSolver.cpp  MinCutSolver.h  benchmark.sh  graph_files.txt  main.cpp  results.csv  results_ofast.csv  results_reduced_guesstimate.csv
stage-2/: CMakeLists.txt  MinCutSolver.cpp  MinCutSolver.h  main.cpp  results-double-if.csv  results.csv
stage-3/: CMakeLists.txt  MinCutSolver.cpp  MinCutSolver.h  main.cpp  results.csv
stage-4/: MinCutSolver.cpp  MinCutSolver.h  benchmark.sh  graph_files.txt  main.cpp  main_mpi.cpp  mpi_main.cpp  mpi_main_1.cpp  mpi_main_2.cpp  mpi_main_3.cpp
